--- a/homepage.html
+++ b/homepage.html
@@ -2,15 +2,47 @@
 <html lang="en">
   <body>
     <link rel="stylesheet" href="style.css" />
-
+    <!--
     <div class="header">
       <h1>Select the building</h1>
     </div>
+  -->
+
+  <div class="dropdown">
+
+    <button class="but4">Select Building</button>
+    
+    <ul>
+        <li><a href="locatepage.html">Main Block</a></li>
+        <li><a href="locatepage.html">KE Block</a></li>
+        <li><a href="locatepage.html">PG Block</a></li>
+
+
+    </ul>
+
+
+  </div>
+
+
+
+
+
+
+
+  <!--
+
+    <a href="locatepage.html">     
 
     <button class="but1">Main Block</button>
 
     <button class="but2">KE Block</button>
 
     <button class="but3">PG Block</button>
+
+    </a>
+
+  -->
+
+
   </body>
 </html>
